--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=9091
 spring.datasource.url = jdbc:mysql://localhost:3306/mydb
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password = youcanwin80
 
 
 ## Hibernate Properties
